--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # Domain
 # This would be set to the production domain with an env var on deployment
 # used by Traefik to transmit traffic and aqcuire TLS certificates
-DOMAIN=localhost
+DOMAIN=suntuto.shop
 # To test the local Traefik config
-# DOMAIN=localhost.tiangolo.com
+# DOMAIN=suntuto.shop.tiangolo.com
 
 # Used by the backend to generate links in emails to the frontend
-FRONTEND_HOST=http://localhost:5173
+FRONTEND_HOST=http://suntuto.shop:5173
 # In staging and production, set this env var to the frontend host, e.g.
 # FRONTEND_HOST=https://dashboard.example.com
 
@@ -17,22 +17,22 @@ PROJECT_NAME="Full Stack FastAPI Project"
 STACK_NAME=full-stack-fastapi-project
 
 # Backend
-BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://localhost.tiangolo.com"
-SECRET_KEY=changethis
+BACKEND_CORS_ORIGINS="http://suntuto.shop,http://suntuto.shop:5173,https://suntuto.shop,https://suntuto.shop:5173,http://suntuto.shop.tiangolo.com"
+SECRET_KEY=GLhte1DuGv1ciRd2Zfc2kHMqTzLCdNR76yoV9Ae4jBM
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=changethis
 
 # Emails
-SMTP_HOST=
-SMTP_USER=
-SMTP_PASSWORD=
+SMTP_HOST=smtp.gmail.com
+SMTP_USER=ulrich
+SMTP_PASSWORD=suntuto.shop
 EMAILS_FROM_EMAIL=info@example.com
 SMTP_TLS=True
 SMTP_SSL=False
 SMTP_PORT=587
 
 # Postgres
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER=db
 POSTGRES_PORT=5432
 POSTGRES_DB=app
 POSTGRES_USER=postgres
