--- a/.env
+++ b/.env
@@ -43,3 +43,8 @@ SENTRY_DSN=
 # Configure these with your own Docker registry images
 DOCKER_IMAGE_BACKEND=backend
 DOCKER_IMAGE_FRONTEND=frontend
+
+
+EMAIL=ulrichnoumsi98@gmail.com
+USERNAME=ulrich
+HASHED_PASSWORD=ulrich:$2y$05$YKL7yGM44Ug5j49Mx8WkDODAiE2TJW40br7FGU6U88A/VjtFrxfV6
