--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,6 +142,8 @@ services:
   frontend:
     image: '${DOCKER_IMAGE_FRONTEND?Variable not set}:${TAG-latest}'
     restart: always
+    environment:
+      - VITE_API_URL=http://backend:8000
     networks:
       - traefik-public
       - default
@@ -151,6 +153,7 @@ services:
         # - VITE_API_URL=https://api.${DOMAIN?Variable not set}
         - VITE_API_URL=http://backend:8000
         - NODE_ENV=production
+      
     labels:
       - traefik.enable=true
       - traefik.docker.network=traefik-public
