--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,8 +8,10 @@ COPY package*.json /app/
 RUN npm install
 
 COPY ./ /app/
-ENV VITE_API_URL=${VITE_API_URL}
-# ARG VITE_API_URL=${VITE_API_URL}
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+#ARG VITE_API_URL=${VITE_API_URL}
+
 
 RUN npm run build
 
